--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "build": "rimraf dist && rollup -c rollup.config.js"
   },
   "dependencies": {
+    "flyd": "^0.2.8",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
+    "patchinko": "^4.1.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "owc-dev-server": "^1.0.0",
-    "@open-wc/eslint-config": "^0.4.1",
-    "@open-wc/prettier-config": "^0.1.0",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.0",
+    "@open-wc/building-rollup": "^0.5.5",
+    "@open-wc/eslint-config": "^0.4.1",
+    "@open-wc/prettier-config": "^0.1.0",
     "husky": "^1.0.0",
     "lint-staged": "^8.0.0",
-    "@open-wc/building-rollup": "^0.5.5",
+    "owc-dev-server": "^1.0.0",
     "rimraf": "^2.6.3",
-    "rollup": "^1.15.4"
+    "rollup": "^1.15.4",
+    "rollup-plugin-node-resolve": "^5.0.3"
   },
   "lint-staged": {
     "*.js": [
