--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
     "patchinko": "^4.1.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "wired-elements": "^1.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
@@ -27,6 +28,7 @@
     "@open-wc/prettier-config": "^0.1.0",
     "husky": "^1.0.0",
     "lint-staged": "^8.0.0",
+    "meiosis-tracer": "^2.0.3",
     "owc-dev-server": "^1.0.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.15.4",
