--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
     "patchinko": "^4.1.0",
+    "roughjs": "^3.1.0",
     "socket.io": "^2.2.0",
     "wired-elements": "^1.0.0"
   },
